# transformer_from_scratch

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  ci.yml:Zone.Identifier
cpp/: attention.cpp  attention.hpp  layers.cpp  layers.hpp  main.cpp  model.cpp  model.hpp  tensor.cpp  tensor.hpp  weights_loader.cpp
data/: tiny_corpus.txt
docs/: experiment_report.md  initial_issues.md  shape_table.md  transformer_notes.md
docs/lessons/: README.md
docs/lessons/lesson01/: README.md  checklist.md  exercises.md  homework.md  lecture_notes.md  slides.md  teacher_notes.md
docs/performance_check/: attention_summary_1000steps.csv  attention_summary_3000steps.csv  create_report_figures.py  performance_check_report.md  prediction_summary_1000steps.csv  prediction_summary_3000steps.csv
python/: compare_cpp.py  export_weights.py  generate.py  run_experiment.py  train.py
python/tiny_transformer/: __init__.py  attention.py  config.py  layers.py  model.py  tokenizer.py  tracing.py
tests/: test_attention.py  test_feedforward.py  test_generate.py  test_layers.py  test_run_experiment.py  test_tiny_gpt.py  test_tokenizer.py  test_tracing.py  test_train.py  test_transformer_block.py
