[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-transformer-from-scratch"
version = "0.1.0"
description = "Tiny decoder-only Transformer implemented in Python and C++ for AI security education."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]

[tool.ruff]
line-length = 100
target-version = "py310"
